BoostFramework: Guard it with overlay
Change-Id: I5e22a590b0f1f0e9a678d45d06bb262021cf84bb

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -6182,4 +6182,7 @@
     <!-- Whether we should persist the brightness value in nits for the default display even if
          the underlying display device changes. -->
     <bool name="config_persistBrightnessNitsForDefaultDisplay">false</bool>
+
+    <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">false</bool>
 </resources>
